Fixes menu image wrap background issue

--- a/css/menu.less
+++ b/css/menu.less
@@ -29,15 +29,13 @@
 // Image
 // -----
 
-.menu-item-image-wrap {
-	background-image: none !important;
+.menu .menu-item-image-wrap {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	max-height: 240px;
+	height: 240px;
 	img {
-		max-height: 100%;
-		margin-bottom: 20px;
+		display: none;
 	}
 }
 
